--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ p {
 
 #features {
   top: 0;
-  height: 265px;
+  height: 275px;
   margin-top: 60px;
   width: 260px;
   position: fixed; /* Stay in place */
@@ -154,9 +154,9 @@ map.on('mousemove', function(e) {
   });
 
   if (states.length > 0) {
-    document.getElementById('pd').innerHTML = '<p><strong> PIN: ' + states[0].properties.pretty_pin14 + '</strong></p><p><strong> Address: ' + states[0].properties.Address + '</strong></p><p><strong> Tax Year: ' + states[0].properties.YEAR + '</strong></p><p><strong> Cook Cty Value: $' + states[0].properties.Board_PIN14_Value + '</strong></p><p><strong> Suggested Value: $' + states[0].properties.PIN14_Predicted_Value + '</strong></p><p><strong> Difference: $' + states[0].properties.PIN14_Difference_pretty + '</strong></p><p><strong> Covid-19 Adj. Value: $' + states[0].properties.Covid_PIN10_Value + '</strong></p><p><strong> If Condo, Total PINs: ' + states[0].properties.Total_Resd_Condos + '</strong></p><p><strong> If Condo, Bldg Value: $' + states[0].properties.Board_PIN10_Value + '</strong></p>';
+    document.getElementById('pd').innerHTML = '<p><strong> PIN: ' + states[0].properties.pretty_pin14 + '</strong></p><p><strong> Address: ' + states[0].properties.Address + '</strong></p><p><strong> Tax Year: ' + states[0].properties.YEAR + '</strong></p><p><strong> Cook Cty Value: $' + states[0].properties.Board_PIN14_Value + '</strong></p><p><strong> Suggested Value: $' + states[0].properties.PIN14_Predicted_Value + '</strong></p><p><strong> Difference: $' + states[0].properties.PIN14_Difference_pretty + '</strong></p><p><strong> Covid-19 Adj. Value: $' + states[0].properties.Covid_PIN10_Value + '</strong></p><p><strong> Total Units (if multiple PINs): ' + states[0].properties.Total_Resd_Condos + '</strong></p><p><strong> Total Property Value: $' + states[0].properties.Board_PIN10_Value + '</strong></p>';
   } else {
-    document.getElementById('pd').innerHTML = '<p>Zoom in until dots are visible, hover over dot for details!</p>';
+    document.getElementById('pd').innerHTML = '<p>Enter an address above or zoom in until dots are visible; hover over dot for details!</p>';
   }
 });
 
