Changed PARCEL to RESIDENTIAL

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset='utf-8' />
-    <title>Appeal Property Value?</title>
+    <title>Tax Inspectr</title>
     <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
     <script src='https://api.mapbox.com/mapbox-gl-js/v1.11.0/mapbox-gl.js'></script>
     <link href='https://api.mapbox.com/mapbox-gl-js/v1.11.0/mapbox-gl.css' rel='stylesheet' />
@@ -99,7 +99,7 @@ type="text/css"
 <script src="https://cdn.jsdelivr.net/npm/es6-promise@4/dist/es6-promise.auto.min.js"></script>
 
 <div id='map'></div>
-<div class='map-overlay' id='features'><h2>PARCEL TAX DETAILS</h2><div id='pd'><p>Zoom in until dots are visible, hover over dot for details!</p></div></div>
+<div class='map-overlay' id='features'><h2>RESIDENTIAL TAX DETAILS</h2><div id='pd'><p>Zoom in until dots are visible, hover over dot for details!</p></div></div>
 <div class='map-overlay' id='legend'></div>
 
 
