--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.css" />
     <script src="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.js"></script>
 
-    <title>Leaflet: Outside geojson, basemap control, control checkbox</title>
+    <title>JSK Photo Indigenous Models</title>
  
     <style>
     #map { position: absolute; top:0; bottom:0; left:0; right:0; }
@@ -143,4 +143,5 @@
 
 </body>
 </html>
+
 
