--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
     
         // checkbox overlay map goes here
         var overlayMaps = {
-            'Indigenous Models': model_data,
+            'Tribal Homeland': model_data,
             'USA Tribal Land': usa_tribe_data
         }
 
@@ -176,4 +176,5 @@
 
 </body>
 </html>
+
 
